tests/data/placebo/test_security_group_only_ports/ec2.AuthorizeSecurityGroupIngress_1.json
{
    "status_code": 200, 
    "data": {
        "ResponseMetadata": {
            "RetryAttempts": 0, 
            "HTTPStatusCode": 200, 
            "RequestId": "ff2c2d2c-fed6-42f9-a4ea-4af0496263ca", 
            "HTTPHeaders": {
                "transfer-encoding": "chunked", 
                "vary": "Accept-Encoding", 
                "server": "AmazonEC2", 
                "content-type": "text/xml;charset=UTF-8", 
                "date": "Tue, 27 Jun 2017 15:42:58 GMT"
            }
        }
    }
}
