tests/data/placebo/test_security_group_only_ports/ec2.AuthorizeSecurityGroupIngress_2.json
{
    "status_code": 200, 
    "data": {
        "ResponseMetadata": {
            "HTTPStatusCode": 200, 
            "RequestId": "2621c002-5939-44b9-b031-2d629f92507e", 
            "HTTPHeaders": {
                "transfer-encoding": "chunked", 
                "vary": "Accept-Encoding", 
                "server": "AmazonEC2", 
                "content-type": "text/xml;charset=UTF-8", 
                "date": "Tue, 09 Aug 2016 14:23:10 GMT"
            }
        }
    }
}
