tests/data/placebo/test_security_group_only_ports/ec2.CreateSecurityGroup_1.json
{
  "status_code": 200,
  "data": {
    "GroupId": "sg-52853023",
    "ResponseMetadata": {}
  }
}
