tests/data/placebo/test_security_group_only_ports/ec2.CreateVpc_1.json
{
  "status_code": 200,
  "data": {
    "ResponseMetadata": {},
    "Vpc": {
      "VpcId": "vpc-82c179fb",
      "InstanceTenancy": "default",
      "Tags": [],
      "Ipv6CidrBlockAssociationSet": [],
      "State": "pending",
      "DhcpOptionsId": "dopt-24ff1940",
      "CidrBlock": "10.4.0.0/16",
      "IsDefault": false
    }
  }
}
