tests/data/placebo/test_security_group_only_ports/ec2.DeleteSecurityGroup_1.json
{
    "status_code": 200, 
    "data": {
        "ResponseMetadata": {
            "HTTPStatusCode": 200, 
            "RequestId": "9ea4a958-4261-4d7f-9c5f-35f756b5d99c", 
            "HTTPHeaders": {
                "transfer-encoding": "chunked", 
                "vary": "Accept-Encoding", 
                "server": "AmazonEC2", 
                "content-type": "text/xml;charset=UTF-8", 
                "date": "Tue, 09 Aug 2016 14:23:12 GMT"
            }
        }
    }
}
