tests/data/placebo/test_security_group_only_ports/ec2.DeleteVpc_1.json
{
    "status_code": 200, 
    "data": {
        "ResponseMetadata": {
            "RetryAttempts": 0, 
            "HTTPStatusCode": 200, 
            "RequestId": "fede321e-8b12-4a68-825e-d90ca5915a52", 
            "HTTPHeaders": {
                "transfer-encoding": "chunked", 
                "vary": "Accept-Encoding", 
                "server": "AmazonEC2", 
                "content-type": "text/xml;charset=UTF-8", 
                "date": "Tue, 27 Jun 2017 15:43:00 GMT"
            }
        }
    }
}
