tests/data/placebo/test_security_group_only_ports/ec2.DescribeSecurityGroups_1.json
{
  "status_code": 200,
  "data": {
    "SecurityGroups": [
      {
        "IpPermissionsEgress": [
          {
            "IpProtocol": "-1",
            "PrefixListIds": [],
            "IpRanges": [
              {
                "CidrIp": "0.0.0.0/0"
              }
            ],
            "UserIdGroupPairs": [],
            "Ipv6Ranges": []
          }
        ],
        "Description": "for apps",
        "IpPermissions": [
          {
            "PrefixListIds": [],
            "FromPort": 61000,
            "IpRanges": [
              {
                "CidrIp": "10.2.0.0/16"
              }
            ],
            "ToPort": 61000,
            "IpProtocol": "tcp",
            "UserIdGroupPairs": [],
            "Ipv6Ranges": []
          },
          {
            "PrefixListIds": [],
            "FromPort": 60000,
            "IpRanges": [
              {
                "CidrIp": "10.2.0.0/16"
              }
            ],
            "ToPort": 62000,
            "IpProtocol": "tcp",
            "UserIdGroupPairs": [],
            "Ipv6Ranges": []
          }
        ],
        "GroupName": "web-tier",
        "VpcId": "vpc-82c179fb",
        "OwnerId": "644160558196",
        "GroupId": "sg-52853023"
      }
    ],
    "ResponseMetadata": {}
  }
}
